# mxli

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/c-any/: int64Math-sliced.c  mxli.c  mxli.h  simpleMath-sliced.c
lib/c-linux/: serial.c
programs/mxli3/: CMakeLists.txt  mxli.c
programs/ramloader/: CMakeLists.txt
programs/ramreader/: CMakeLists.txt  ramreader.c
programs/uconsole/: CMakeLists.txt
