project(mxli-lib)

find_package(Doxygen)

add_library(mxli-lib "")
target_sources(
    mxli-lib
    PRIVATE
        c-any/3dProtocols.h
        c-any/ansi.h
        c-any/attribute.h
        c-any/bezier.c
        c-any/bezier.h
        c-any/bezier2Command.h
        c-any/bezier2PolarUtils.h
        c-any/bezier2PolarUtils-sliced.c
        c-any/bezier2Utils.h
        c-any/bezier2Utils-sliced.c
        c-any/bezierN.h
        c-any/bezier-sliced.c
        c-any/bezierUtils.h
        c-any/bezierUtils-sliced.c
        c-any/blockFifo.h
        c-any/bt.c
        c-any/bt.h
        c-any/bufferReader.h
        c-any/bufferWriter.c
        c-any/bufferWriter.h
        c-any/build.sh
        c-any/button.c
        c-any/button.h
        c-any/concurrentAccu.h
        c-any/consoleText.c
        c-any/consoleText.h
        c-any/crc.c
        c-any/crc.h
        c-any/cyclicIterator.h
        c-any/dcf77.c
        c-any/dcf77.h
        c-any/dds.h
        c-any/dds3p.c
        c-any/dds3p.h
        c-any/dogDriver.c
        c-any/dogDriver.h
        c-any/ds75.h
        c-any/eadogm128.c
        c-any/eadogm128.h
        c-any/eadogm128Fb.c
        c-any/eadogm128Fb.h
        c-any/eadogm128Text.c
        c-any/eadogm128Text.h
        c-any/ecMotors.c
        c-any/ecMotors.h
        c-any/enetIoFifo.h
        c-any/ethernet.h
        c-any/ethernetArp.h
        c-any/ethernetArpIp4.h
        c-any/ethernetArp-sliced.c
        c-any/ethernetIp4.h
        c-any/ethernetIp4Icmp.c
        c-any/ethernetIp4Icmp.h
        c-any/ethernet-sliced.c
        c-any/executable32.c
        c-any/executable32.h
        c-any/fatal.c
        c-any/fatal.h
        c-any/fb128x64.h
        c-any/fb128x64-sliced.c
        c-any/fbConsole.c
        c-any/fbConsole.h
        c-any/fifo.h
        c-any/fifoIo.c
        c-any/fifoIo.h
        c-any/fifoParse.h
        c-any/fifoParse-sliced.c
        c-any/fifoParseStructure.h
        c-any/fifoParseStructure-sliced.c
        c-any/fifoPopt.h
        c-any/fifoPopt-sliced.c
        c-any/fifoPrint.h
        c-any/fifoPrintFixedPoint.h
        c-any/fifoPrintFixedPoint-sliced.c
        c-any/fifoPrint-sliced.c
        c-any/fifoPrintTechnical.h
        c-any/fifoPrintTechnical-sliced.c
        c-any/fifoq.h
        c-any/fifoq-sliced.c
        c-any/fifo-sliced.c
        c-any/fixedPoint.h
        c-any/font7x8.c
        c-any/font8x8.c
        c-any/fontNimbus38x30.c
        c-any/fontNimbus38x30.inc
        c-any/fonts.h
        c-any/fontSun8x16.c
        c-any/fontSun8x16.inc
        c-any/fontSun12x22.c
        c-any/fontSun12x22.inc
        c-any/fontVga6x11.c
        c-any/fontVga6x11.inc
        c-any/fontVga8x8.c
        c-any/fontVga8x8.inc
        c-any/fram.c
        c-any/fram.h
        c-any/geomInt.h
        c-any/geomInt-sliced.c
        c-any/gfxmono.h
        c-any/gfxmono-sliced.c
        c-any/hexImage.h
        c-any/hexImage-sliced.c
        c-any/i2c.h
        c-any/i2cSeqio.h
        c-any/indexMark.c
        c-any/indexMark.h
        c-any/int16Fifo.h
        c-any/int32Adjust.h
        c-any/int32Cyclic.h
        c-any/int32Fifo.h
        c-any/int32Integrator.c
        c-any/int32Integrator.h
        c-any/int32List.h
        c-any/int32List-sliced.c
        c-any/int32Math.h
        c-any/int32Math-sliced.c
        c-any/int32Pair.h
        c-any/int32PairList.h
        c-any/int32PairList-sliced.c
        c-any/int32Pair-sliced.c
        c-any/int32Scale.h
        c-any/int32Sigmoid.h
        c-any/int32x2.h
        c-any/int32x2Bezier.h
        c-any/int32x2Fifo.h
        c-any/int32x2Fifo-sliced.c
        c-any/int32x2-sliced.c
        c-any/int32x2x2.h
        c-any/int32x2x2-sliced.c
        c-any/int64Math.h
        c-any/int64Math-sliced.c
        c-any/integers.h
        c-any/interpolation.h
        c-any/interpolation-sliced.c
        c-any/ioFifo.h
        c-any/ip4.h
        c-any/ip4Icmp.h
        c-any/ip4Icmp-sliced.c
        c-any/ip4-sliced.c
        c-any/ip4Tcp.h
        c-any/ip4Tcp-sliced.c
        c-any/ip4Udp.h
        c-any/ip4Udp-sliced.c
        c-any/ipStack.c
        c-any/ipStack.h
        c-any/irdecNec.c
        c-any/irdecNec.h
        c-any/lm73.c
        c-any/lm73.h
        c-any/lm75b.h
        c-any/lm75b-sliced.c
        c-any/lm92.h
        c-any/lm92-sliced.c
        c-any/log
        c-any/lpcIsp.h
        c-any/lpcIsp-sliced.c
        c-any/lpcMac.h
        c-any/lpcMemories.h
        c-any/lpcMemories-sliced.c
        c-any/ltc2485.c
        c-any/ltc2485.h
        c-any/macros.h
        c-any/miim.c
        c-any/miim.h
        c-any/miimKs8721.c
        c-any/miimKs8721.h
        c-any/mlx9061x.h
        c-any/mlx90614.h
        c-any/mlx90615.h
        c-any/multiHandler32.c
        c-any/multiHandler32.h
        c-any/mxli.c
        c-any/mxli.h
        c-any/newline.h
        c-any/nvidiaDecoder.c
        c-any/nvidiaDecoder.h
        c-any/objclean.sh
        c-any/parse.h
        c-any/parse-sliced.c
        c-any/pca9555.h
        c-any/physics.c
        c-any/physics.h
        c-any/print.c
        c-any/print.h
        c-any/printBin8.c
        c-any/printBin16.c
        c-any/printBin32.c
        c-any/printBin64.c
        c-any/printFixedPoint.h
        c-any/printFixedPoint-sliced.c
        c-any/printHex8.c
        c-any/printHex16.c
        c-any/printHex32.c
        c-any/printHex64.c
        c-any/printHexdump8.c
        c-any/printHexdump32.c
        c-any/printLn.c
        c-any/printSDec32.c
        c-any/printSDec64.c
        c-any/printString.c
        c-any/printUDec32.c
        c-any/printUDec64.c
        c-any/projectionDesignControl.c
        c-any/projectionDesignControl.h
        c-any/pwd.h
        c-any/quadratic.c
        c-any/quadratic.h
        c-any/roundRobin.h
        c-any/seqio.c
        c-any/seqio.h
        c-any/seqioFram.h
        c-any/seqioMlx9061x.c
        c-any/seqioMlx9061x.h
        c-any/sharedConfig.c
        c-any/sharedConfig.h
        c-any/simpleMath.h
        c-any/simpleMath-sliced.c
        c-any/sineTables.h
        c-any/sineTables-sliced.c
        c-any/sinq.h
        c-any/sinq-sliced.c
        c-any/smallButton.h
        c-any/smallButton-sliced.c
        c-any/st7565.h
        c-any/stringTable.h
        c-any/stringTable-sliced.c
        c-any/symbolTable.h
        c-any/symbolTable-sliced.c
        c-any/synchronization.h
        c-any/temperature.h
        c-any/temperature-sliced.c
        c-any/timeAndDate.h
        c-any/timeAndDate-sliced.c
        c-any/timedEventGenerator.c
        c-any/timedEventGenerator.h
        c-any/uint16Div.h
        c-any/uint32Div.h
        c-any/unionized.h
        c-any/usb.c
        c-any/usb.h
        c-any/usMelody.h
        c-any/uu.c
        c-any/uu.h
        c-any/zxInterpolator.c
        c-any/zxInterpolator.h
        c-linux/bezierToSource.c
        c-linux/fd.c
        c-linux/hexFile.c
        c-linux/raspiGpio.c
        c-linux/serial.c
        c-linux/c-linux/bezierToSource.h
        c-linux/c-linux/fd.h
        c-linux/c-linux/hexFile.h
        c-linux/c-linux/raspiGpio.h
        c-linux/c-linux/serial.h)
target_include_directories(mxli-lib PUBLIC c-any c-linux)

if(DOXYGEN_FOUND)
    #TODO: use docs/Doxyfile
    doxygen_add_docs(mxli-lib-doc ALL c-any c-linux c-linux/c-linux)
endif()
